[workspace]
members = [
    "bin/numo",
    "crates/artemis-core",
    "crates/strategies/numo-arb",
]
resolver = "2"

default-members = ["bin/numo"]

[workspace.dependencies]
## eth
ethers = { version = "2", features = ["ws", "rustls"]}
ethers-signers = "2.0"


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

